# juegoDeLaVida

./: CMakeLists.txt  auxiliares.cpp  auxiliares.h  ejercicios.cpp  ejercicios.h  es.cpp  juegoDeLaVida.cpp
